# micstream-android

./: .gitignore  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/micstream/micstream_android/: MainActivity.kt  MicQForegroundService.kt  MicStreamForegroundService.kt
lib/: main.dart
lib/providers/: stream_provider.dart
lib/screens/: home_screen.dart
lib/services/: audio_capture_service.dart  audio_stream_manager.dart  discovery_service.dart  foreground_service.dart  noise_suppression_service.dart  opus_encoder_service.dart  udp_sender_service.dart
scripts/: setup_rnnoise.ps1  setup_rnnoise.sh
test/: widget_test.dart
